--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "icd-10-mobile-assistant",
+  "name": "icd10-mobile-assistant",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -9,26 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~6.1.2",
-    "@expo/vector-icons": "^15.0.3",
-    "@react-navigation/bottom-tabs": "^7.8.6",
-    "@react-navigation/native": "^7.1.21",
-    "@react-navigation/native-stack": "^7.8.0",
-    "@supabase/supabase-js": "^2.84.0",
-    "expo": "~54.0.25",
-    "expo-clipboard": "^8.0.7",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0",
-    "react-native-web": "^0.21.0"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@supabase/supabase-js": "^2.39.0",
+    "expo": "~54.0.0",
+    "expo-av": "^16.0.7",
+    "expo-clipboard": "~7.0.0",
+    "expo-image-picker": "^17.0.8",
+    "expo-localization": "^17.0.7",
+    "expo-status-bar": "~2.0.0",
+    "i18next": "^25.6.3",
+    "react": "18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^16.3.5",
+    "react-native": "0.76.5",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "^0.21.2"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
-    "@types/react-native": "^0.73.0",
-    "typescript": "~5.9.2"
+    "@babel/core": "^7.20.0",
+    "@types/expo__vector-icons": "^9.0.1",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
