--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@supabase/supabase-js": "^2.39.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.0",
     "expo-av": "^16.0.7",
     "expo-clipboard": "~7.0.0",
+    "expo-file-system": "^19.0.19",
     "expo-image-picker": "^17.0.8",
     "expo-localization": "^17.0.7",
     "expo-status-bar": "~2.0.0",
