--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -21,6 +22,7 @@
     "expo-file-system": "^19.0.19",
     "expo-image-picker": "^17.0.8",
     "expo-localization": "^17.0.7",
+    "expo-sqlite": "~15.0.4",
     "expo-status-bar": "~2.0.0",
     "i18next": "^25.6.3",
     "react": "18.3.1",
