🔒 Security: Implement comprehensive prevention measures for credential exposure
- Remove mcp-server/mcp-config.json from tracking (contained exposed service role key)
- Add pre-commit hook to automatically detect and block secrets in commits
- Update MCP server to prefer SUPABASE_ANON_KEY over SERVICE_ROLE_KEY for better security
- Create SECURITY_BEST_PRACTICES.md with detailed security guidelines
- Create SECURITY_QUICK_REFERENCE.md for quick incident response
- Add setup-mcp-secure.sh script for guided safe configuration
- Update .gitignore with comprehensive secret file patterns
- Create mcp-config.example.json template without secrets
- Update SECURITY_INCIDENT.md with resolution and prevention measures

Related to security incident where service role key was exposed in commit 6950a2e.
Keys have been rotated. These measures prevent future incidents.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ node_modules
 mcp-server/.env
 api/.env
 
+# MCP configuration with secrets
+mcp-server/mcp-config.json
+mcp-config.json
+
 # VS Code settings with credentials (use .vscode/settings.local.json instead)
 .vscode/settings.local.json
 .vscode/*.local.json
