--- a/mcp-server/.env.example
+++ b/mcp-server/.env.example
@@ -1,6 +1,15 @@
 # Supabase Configuration
 SUPABASE_URL=your-supabase-url
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
-# Note: Use the service role key (not anon key) for MCP server
-# to have full access to your Supabase instance
+# Option 1 (RECOMMENDED): Use anon key with Row Level Security
+# This is the public key - safe to use, relies on RLS for security
+SUPABASE_ANON_KEY=your-anon-key
+
+# Option 2: Use service role key (admin access - bypasses RLS)
+# Only use if you need admin operations or don't have RLS enabled
+# NEVER commit this key - keep it secret!
+# SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# Note: The server will use SUPABASE_ANON_KEY if available,
+# otherwise falls back to SUPABASE_SERVICE_ROLE_KEY
+
