Fix navigation errors and add patient selector to nursing tools
- Fixed CarePlanDetail navigation error by updating to CarePlanList
- Added Platform-specific Alert handling for web (window.confirm/alert)
- Fixed ProfileScreen sign out button for web compatibility
- Created reusable PatientSelector component for nursing tools
- Integrated PatientSelector into CarePlanBuilder and SbarGenerator
- Fixed generateSbarTemplate function call signature
- Improved user experience - can now select patients directly in nursing tools
- Added error handling and logging for better debugging

--- a/app.json
+++ b/app.json
@@ -7,15 +7,18 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "scheme": "icd10assistant",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.icd10.assistant"
     },
     "android": {
+      "package": "com.icd10.assistant",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
